--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-static": "^3.0.9",
 		"@tailwindcss/postcss": "^4.1.4",
 		"@types/eslint": "^8.56.0",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
